--- a/public/style.css
+++ b/public/style.css
@@ -183,7 +183,17 @@ body{
 }
 
 .score_panel {
-    display: none;
+    opacity: 0;
+
+    -webkit-transition: opacity 2s ease-in;
+    -moz-transition: opacity 2s ease-in;
+    -ms-transition: opacity 2s ease-in;
+    -o-transition: opacity 2s ease-in;
+    transition: opacity 2s ease-in;
+}
+
+.score_panel .load {
+    opacity: 1;
 }
 
 .other-header {
